added pictures in portfolio and slider

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		#makeMeScrollable
 		{
 			width:100%;
-			height: 330px;
+			height: 210px;
 			position: relative;
 		}
 		
@@ -171,7 +171,7 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-6 col-xs-6 portfolio__image">
                     <a href="#" class="portfolio-box">
-                        <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/2.jpg" alt="" class="img-responsive"/>
+                        <img src="images/1_portfolio.jpg" alt="" class="img-responsive"/>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category">
@@ -186,7 +186,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-xs-6 portfolio__image">
                     <a href="#" class="portfolio-box">
-                        <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/2.jpg" alt="" class="img-responsive"/>
+                        <img src="images/2_portfolio.jpg" alt="" class="img-responsive"/>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category">
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-xs-6 portfolio__image">
                     <a href="#" class="portfolio-box">
-                        <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/2.jpg" alt="" class="img-responsive"/>
+                        <img src="images/3_portfolio.jpg" alt="" class="img-responsive"/>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category">
@@ -216,7 +216,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-xs-6 portfolio__image">
                     <a href="#" class="portfolio-box">
-                        <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/2.jpg" alt="" class="img-responsive"/>
+                        <img src="images/4_portfolio.jpg" alt="" class="img-responsive"/>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category">
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-xs-6 portfolio__image hidden-xs">
                     <a href="#" class="portfolio-box">
-                        <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/2.jpg" alt="" class="img-responsive"/>
+                        <img src="images/5_portfolio.jpg" alt="" class="img-responsive"/>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category">
@@ -246,7 +246,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-xs-6 portfolio__image hidden-xs">
                     <a href="#" class="portfolio-box">
-                        <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/2.jpg" alt="" class="img-responsive"/>
+                        <img src="images/6_portfolio.jpg" alt="" class="img-responsive"/>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category">
@@ -664,12 +664,13 @@
 			// None of the options are set
 			$("div#makeMeScrollable").smoothDivScroll({
 				autoScrollingMode: "onStart"
+
 			});
 		});
 	</script>
 
 
-    <!-- Include parallax effect
+    <!-- Include parallax effect-->
     <script type="text/javascript">
         var ypos,image;
         function parallex() {
@@ -679,7 +680,7 @@
         }
         window.addEventListener('scroll', parallex),false;
 
-    </script> -->
+    </script> 
 </body>
 
 </html>
