repaired scroll button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="blocks/body/body.css"/>
     <link rel="stylesheet" href="blocks/body/our-team/ourteam.css"/>
     <link rel="stylesheet" href="blocks/body/feedback/feedback.css"/>
-    <link rel="stylesheet" href="blocks/body/button/button.css"/>
+   
 
 
 
@@ -108,10 +108,14 @@
                         <a href="#reviews" class="audioHover audioClick nav-elem">Reviews</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfoliooo" class="audioHover audioClick nav-elem">Partners and Sponsors</a>
+                        <a href="#contact" class="audioHover audioClick nav-elem">Contact</a>
+    
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact" class="audioHover audioClick nav-elem">Contact</a>
+                        <a href="#partners" class="audioHover audioClick nav-elem">Partners and Sponsors</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#footer" class="audioHover audioClick nav-elem">Links</a>
                     </li>
                 </ul>
             </div>
@@ -521,7 +525,7 @@
 
 
 
-    <section class="portfoliooo" id="portfoliooo">
+    <section class="partners" id="partners">
 
         <div class="container">
             <div class="row text-center">
@@ -553,7 +557,7 @@
 
     <div id="scrollup"><img alt="" src="img/up.png" width="50" height="50"></div>
 
-        <div class="footer-info">
+        <div class="footer-info" id="footer">
             <div class="container">
                 <div class="row">
                     <div class="footer-col">
