--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
     </section>
 
-    <!-- <section id="contact">
+    <section id="contact">
             <div class="container">
 
                 <div class="row">
@@ -322,9 +322,9 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
-         <section id="contacts">
+ <!--         <section id="contacts">
             <div class="container">
 
                 <div class="row">
@@ -332,7 +332,7 @@
                             <h2>Contact us</h2>
                     </div>
 
-                    <!-- START FORM FOR CLIENTS -->
+                    
                     <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-1">
 
                         <form name="sentMessage" id="contactForm">
@@ -375,8 +375,7 @@
                             </fieldset>
                         </form>
                     </div>
-                    <!-- END FORM FOR CLIENTS -->
-                    <!-- START FORM FOR REFEREE -->
+                  
                     <div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-2">
                         <form action="">
                             <fieldset>
@@ -423,7 +422,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
 
     <footer class="text-center">
         <div class="footer-info">
