button sound changed, removed the scroll, black and white slider

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     
                     </li>
                     <li class="page-scroll">
-                        <a href="#partners" class="audioHover audioClick nav-elem">Partners and Sponsors</a>
+                        <a href="#partners" class="audioHover audioClick nav-elem">Partners</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#footer" class="audioHover audioClick nav-elem">Links</a>
@@ -529,7 +529,7 @@
 
         <div class="container">
             <div class="row text-center">
-                <h3 class="portfolio__description">Partners and Sponsors<h3>
+                <h3 class="portfolio__description">Partners<h3>
             </div>
         </div>
         
@@ -547,17 +547,9 @@
     </section>
 
 
-
-
-
-
-
-
     <footer class="text-center">
 
-    <div id="scrollup"><img alt="" src="img/up.png" width="50" height="50"></div>
-
-        <div class="footer-info" id="footer">
+           <div class="footer-info" id="footer">
             <div class="container">
                 <div class="row">
                     <div class="footer-col">
@@ -630,7 +622,7 @@
     } else {
       myaudio.pause();
       mybtn.src = "img/2b.png";
-      span.innerHTML = "Вкл звук";
+      //span.innerHTML = "Вкл звук";
     }
   };
 
